
	mbout:
		When a poll was removed, the outbound was not rescanned.

	examples:
		Prepared for more example translations.
		Added German template files made by Joachim Kuwan.

	mbfile:
		Move old files to another area failed, only the symbolic link
		was moved.

	mbfido:
		Echomail from other zones showed the address of your own zone.
		Added logging when other errors are found.

	mbsetup:
		Removed global flags No-IBN, IFC and ITN from the setup.
		Removed nodes flags No-IBN, IFC and ITN from the setup.


v0.36.00	26-Dec-2002 - stable release

	update:
		These are the total update instructions for the upgrade from
		v0.33.21 until v0.36.00. Read and perform this upgrade with 
		great care, this one is quite complicated.
                Make sure you don't have download files with case differences
                in download directories like FileName.zip and FILENAME.ZIP.
                With this upgrade files with such names will be deleted!
                Rename them before you upgrade!
		Make sure your outbound is empty, "mbout stat" should not show
		anything in the outbounds. You may delete ~/bin/mbfido before
		you do this so when you deliver all pending mail no new mail
		will be tossed. New mail will stay in your inbound now.
		Now backup your whole bbs and download areas!
		Compile the new bbs programs, do not yet install them.
		Shutdown the bbs with "mbstat close". Kill the mbtask daemon.
		Depending on your distribution as root you can do
		"/etc/rc.d/init.d/mbsed stop", the location may vary.
                Delete ~/etc/lastcall.data
                Delete ~/etc/archiver.data
                Delete ~/etc/virscan.data
		Because the macro template files are changed and you may have
		personalized them, these files are not automatic upgraded. If
		you want them to be upgraded delete all files in 
		~/english/macro .
		Now install all new binaries (su to root, make install).
		Delete ~/bin/mbfido again (to prevent tossing mail).